--- a/Paper/exchange_rates.tex
+++ b/Paper/exchange_rates.tex
@@ -65,17 +65,21 @@
 %\setcopyright{cagovmixed}
 
 
-\title{{Predicting Exchange Rates for Medium Term Contracts}
+\title{{Predicting Exchange Rates for Medium Term Contracts} \\
+ISyE 7406 \\
+April 30, 2016
 }
 \numberofauthors{2} 
 \author{
 \alignauthor
 Eduardo Lori\'{e}\\
        \affaddr{Georgia Institute of Technology}\\
+       \affaddr{Student ID: 24772}
        \email{edlorie@gatech.edu}
 \alignauthor 
 Matthew Robinson \\
        \affaddr{Georgia Institute of Technology}\\
+       \affaddr{Student ID: 23311}
        \email{mrobinson72@gatech.edu}
 }
 
@@ -102,7 +106,7 @@ e_{t+1} = e_{t} \left( \frac{1+i_{d}}{1+i_{f}} \right)
 \begin{equation}
 \frac{e_{t+1}-e_{t}}{e_{t}} = \frac{1+\pi_{d}}{1+\pi{f}} - 1
 \end{equation}
-\par{} In the literature, Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to the levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict exchange rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk, which predicts no change in the exchange rate, outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
+\par{} Obstfeld and Taylor show that arbitrage opportunities between foreign and domestic assets are near zero under floating currency regimes, which suggests that exchange rates behave as predicted by interest rate parity. Likewise, Frankel and Rose provide evidence that exchange rates converge to the levels predicted by purchasing power parity in the long run. The relevant time-frame for the \emph{long run} in this context is about four years. Under shorter time horizons, purchasing power parity performs considerably less well. Likewise, difficulty in predicting the relative performance of financial assets in different countries makes it difficult to predict exchange rates using interest rate parity. In fact, Meese and Rogoff famously demonstrated that a random walk, which predicts no change in the exchange rate, outperforms structural models for the exchange rate over a one to twelve month window. For this reason, the random walk is currently used as a benchmark for assessing the quality of models for predicting exchange rates.
 \par{} Statisticians have developed several approaches for predicting exchange rates. A model proposed by Hsiech suggests that there is little linear dependence in exchange rate movements, but strong nonlinear dependence. On the other hand, Meese and Rose showed that nonlinear estimators to do not significantly improve popular models for predicting exchange rates, and that these models do not outperform a random walk. All of these models incorporate macroeconomic variables, such as interest rates and inflation rates. Lyons and Evans produced more accurate models by incorporating microeconomic variables. They augmented previously used linear models with a new variable, order flow, which is the net of buyer and seller initiated orders. This model accurately predicted 60\% of daily changes in the exchange rate between the German Mark and the US dollar. Some researchers have also modeled exchange rates using more sophisticated machine learning techniques. Panda and Narasimhan showed that neural networks outperform both a random walk and linear autoregressive models when predicting weekly changes in the Indian rupee/US dollar exchange rate.
 \par{} Past statistical research on exchange rates has largely focused on financial applications. Predicting daily or weekly exchange rate movements primarily benefits financial institutions that participate in foreign exchange markets. The goal of these firms is to profit by placing bets on currency movements. By contrast, this paper considers the problem from the perspective of an importer or exporter. Their goal is to predict medium term currency movements in order to accurately forecast future costs and revenues. This helps them make more informed business decisions. Considering the medium run time horizon and using monthly data makes the problem more feasible from an economic perspective. It also makes the application less ripe for more complicated prediction techniques, such as neural networks, because the number of observations and feature space are both small. Due to these considerations, this paper will focus primarily on traditional time series techniques and variable selection.
 
@@ -112,7 +116,7 @@ This paper restricts its attention to changes in the exchange rate between the U
 
 \section{Exploratory Data Analysis}
 
-Before developing models to predict the exchange rate, we will begin with some preliminary exploration of the data. This section deals with two primary concerns: assessing the behavior of the time series and discerning which variables are important as predictors for the exchange rate. First, we will test whether or not the time series is stationary, then determine the degree of autocorrelation. After this, we explore basic relationships between the predictors and the exchange rate.
+Before developing models to predict the exchange rate, we will begin with some preliminary exploration of the data. This section deals with two primary concerns: assessing the behavior of the time series and discerning which variables are important as predictors for the exchange rate. First, we will test whether or not the time series is stationary, then determine the degree of autocorrelation. After this, we explore basic relationships between the predictors and the exchange rate. Finally, we perform principal component analysis to investigate the complexity of the dataset.
 
 \subsection{Stationarity}
 
@@ -152,7 +156,7 @@ Mexico & Pct. Change & -3.615 & 0.032 \\
 \end{figure}
 
 Another common feature of time series data is autocorrelation. Autocorrelation refers to correlation between values of a variable at different points in time. In order to assess the degree of autocorrelation in the exchange rate data set, we fit a simplified linear model that consisted of the current exchange rate, along with the interest rate, inflation rate and government bond yield for both countries. After fitting the model, we computed the Durbin-Watson test statistic with one to twelve month lags. Figure~\ref{fig:autocorrelation} depicts the value of the correlation coefficient for each country as a function of time.
-\par{} The test statistics show that the data set exhibits strong autocorrelation for several months, and that the severity of the autocorrelation decays over time. For each country, the correlation coefficient for a one month lag is in excess of 0.80, and is as high as 0.95 for Japan. This value drops below 0.50 for every country by month four, with the exception of Japan. The persistence of autocorrelation in the case of Japan may be due to its active currency manipulation policy. For each country, the correlation coefficient remains statistically significant for at least five months. The presence of autocorrelation in the data set argues for including lagged variables in the model, through at least several months. Note that a typical lagged model includes the dependent variable at previous time steps as an independent variable. In this case, the dependent variable at time $t$ is the one year percent change in the exchange rate from one month prior, which is not known until $t+11$. For this reason, we cannot use it a predictor at time $t$. As a result, instead of lagged values of the dependent variable, we will use lagged values for each of the independent variables. For long lags, this results in a large number of possible predictors, which is why variable selection is particularly important in this problem.
+\par{} The test statistics show that the data set exhibits strong autocorrelation for several months, and that the severity of the autocorrelation decays over time. For each country, the correlation coefficient for a one month lag is in excess of 0.80, and is as high as 0.95 for Japan. This value drops below 0.50 for every country by month four, with the exception of Japan. The persistence of autocorrelation in the case of Japan may be due to its active currency manipulation policy. For each country, the correlation coefficient remains statistically significant for at least five months. The presence of autocorrelation in the data set argues for including lagged variables in the model, through at least several months. Note that a typical lagged model includes the dependent variable at previous time steps as an independent variable. In this case, the dependent variable at time $t$ is the one year percent change in the exchange rate from one month prior, which is not known until $t+11$. Since this value is not known at the time the prediction is made, we cannot use it as a predictor at time $t$. As a result, instead of lagged values of the dependent variable, we will use lagged values for each of the independent variables. For long lags, this results in a large number of possible predictors, which is why variable selection is particularly important in this problem.
 
 %\begin{figure}
 %\centering
@@ -206,16 +210,16 @@ The high degree of correlation between the variables suggests that we may be abl
 Exchange rate models must consider three important factors: which variables to include in the model, candidate methods for estimating the model and the criteria for evaluating each method. The variable selection process involves deciding which predictors to include in the model, as well as how many months of lagged observations to include. Candidate methods were chosen by considering several statistical techniques with properties that made them appealing for the exchange rate data set. These include both linear and tree based methods. Finally, we develop a method for evaluating the models that accounts for autocorrelation and leverages the stationarity of the time series.
 
 \subsection{Variable Selection}
-Selecting which variables to include in the model requires deciding which economic factors are relevant and for how many months prior to the current observation. To recap, the variables in the data set include the current exchange rate, interest rate, inflation rate and GDP growth rate for both countries, as well as several variables related to international financial flows. There is a strong theoretical justification for including each of these variables in the model. However, the number of potential predictors makes overfitting problematic, especially after the inclusion of lagged variables. We dealt with the problems of selecting the a good set of predictors and an appropriate lag simultaneously by applying the following procedure. We assessed the performance of different lags by comparing the performance of a linear regression model across a variety of lags. For each lag, the variables were chosen by forward stepwise variable selection, using AIC as the selection criteria. This technique produces a model that balances the trade off between training error and model complexity.
+Selecting which variables to include in the model requires deciding which economic factors are relevant and for how many months prior to the current observation. To recap, the variables in the data set include the current exchange rate, interest rate, inflation rate and GDP growth rate for both countries, as well as several variables related to international financial flows. There is a strong theoretical justification for including each of these variables in the model. However, the number of potential predictors makes overfitting problematic, especially after the inclusion of lagged variables. We dealt with the problems of selecting a good set of predictors and an appropriate lag simultaneously by comparing the performance of a linear regression model across a variety of lags. For each lag, the variables were chosen by forward stepwise variable selection, using AIC as the selection criteria. This technique produces a model that balances the trade off between training error and model complexity.
 
 \subsection{Candidate Methods}
 After selecting a suitable subset of variables to include in the model, we fit the model using several statistical techniques. Two families of models were considered: linear models and tree based methods. The advantage of the linear models is that they are simpler, but still powerful if they account for the structure of the time series properly. Tree based methods are considered as an alternative because of the high dimensional feature space. Since there are theoretical reasons to believe that each variable is important, ensemble methods that vary the input variables may provide superior results.
 
-\par{} The linear models include standard linear regression, ridge regression, LASSO regression and principal components regression. Ridge regression and LASSO regression both include a regularization constant that gives preferences to models with smaller parameters in terms of absolute value. These models are appealing for the exchange rate data set because autocorrelation and the inclusion of lagged variables means the predictors in the model are highly correlated. Including a regularization constant helps prevent overfitting to the training data. For both of these models, the regularization constant is chosen using generalized cross validation. Principal component regression is potentially useful due to the large number of predictors in the model and the high correlation between those predictors. The forward stepwise variable selection technique described above results in models with 15-20 predictors, which is relatively complex for a data set that has on the order of hundreds of observations. Moreover, the preliminary data analysis that we performed above shows that a low rank approximation to the data set can be constructed with around ten components when a nine month lag is considered, which makes principal components regression appealing. In our models, we choose the number of principal components to include in the model through cross-validation.
+\par{} The linear models include standard linear regression, ridge regression, LASSO regression and principal components regression. Ridge regression and LASSO regression both include a regularization constant that gives preference to models with smaller parameters in terms of absolute value. These models are appealing for the exchange rate data set because autocorrelation and the inclusion of lagged variables means the predictors in the model are highly correlated. Including a regularization constant helps prevent overfitting to the training data. For both of these models, the regularization constant is chosen using generalized cross validation. Principal component regression is potentially useful due to the large number of predictors in the model and the high correlation between those predictors. The forward stepwise variable selection technique described above results in models with 15-20 predictors, which is relatively complex for a data set that has on the order of hundreds of observations. Moreover, the preliminary data analysis that we performed above shows that a low rank approximation to the data set can be constructed with around ten components when a nine month lag is considered, which makes principal components regression appealing. In our models, we choose the number of principal components to include in the model through cross-validation.
 
 \par{} In addition to linear models, three tree based methods are considered: full trees, pruned trees, and random forests. Regression trees are capable of capturing non-linear interactions between the predictors. Since the feature space for the exchange rate problem is highly interdependent and large relative to the size of the data set, tree based methods are a reasonable option to consider. Regression trees work by recursively partitioning the data set. A separate model can then be fit for each partition. Tree based methods predict future outcomes by classifying new data into one of the partitions, and then applying the appropriate model. Each partition is represented by the nodes, or leaves, of the tree. 
 
-\par{} Overfitting is a common concern with tree based methods. Trees are sometimes pruned to help avoid overfitting. A tree is pruned by considering the terminal nodes of the tree and determining if merging two nodes can decrease the entropy of the parent node. If so, the nodes are merged. Random forests can also help avert overfitting. Random forests take an ensemble of trees and return the average output of all the trees in the ensemble as the predicted value. In random forests, the models in the ensemble differ in respect to their features. This prevents the model from fitting a given feature set too closely. Given the large number of possible features and the importance of variable selection in this problem, random forests stand out as a potentially fruitful avenue to explore.
+\par{} Overfitting is a common concern with tree based methods. Trees are sometimes pruned to help avoid overfitting. A tree is pruned by considering the terminal nodes of the tree and determining if merging two nodes can decrease the entropy of the parent node. If so, the nodes are merged. Random forests can also help avert overfitting. Random forests take an ensemble of trees and return the average output of all the trees in the ensemble as the predicted value. In random forests, the models in the ensemble differ with respect to their features. This prevents the model from fitting a given feature set too closely. Given the large number of possible features and the importance of variable selection in this problem, random forests stand out as a potentially fruitful avenue to explore.
 
 \subsection{Model Evaluation}
 Evaluating the effectiveness of each model requires splitting the data into training and test sets. In this paper, the training set consists of 80\% of the available data, with the remaining allocated to the test set. The technique for splitting the data must account for two significant issues: autocorrelation and the size of the data set.
@@ -225,7 +229,7 @@ Evaluating the effectiveness of each model requires splitting the data into trai
 
 \section{Results}
 
-An exchange rate prediction model was fitted for each of the methods described above. This required two steps. First, we addressed the problem of variable selection and choosing an appropriate lag. After determining which variables to include in the model, we fit the model using each method and compared the results.
+An exchange rate prediction model was fitted for each of the methods described above. This required two steps. We first addressed the problem of variable selection and choosing an appropriate lag. After determining which variables to include in the model, we fit the model using each method and compared the results.
 
 \subsection{Lag and Variable Selection}
 
@@ -267,7 +271,7 @@ We determined an appropriate lag by comparing the performance of a standard line
 
 \begin{figure}
 \centering
-\caption{Mean Testing Error}
+\caption{Mean Testing Error - Linear Methods}
 \begin{tabular}{l l l l l l}
 Country	& Standard 	& Ridge 		& Lasso 		& PCR 		& Naive \\
 Canada 	& 0.00137 	& 0.00139 	& 0.00140 	& 0.00153 	& 0.0063 \\
@@ -283,7 +287,7 @@ Korea	& 0.00291 	& 0.00293 	& 0.00310 	& 0.00251 	& 0.0128 \\
 
 
 The mean testing errors for the 100 random partitions of the data set appear in Figure~\ref{tab:comparison} for each country and linear estimation technique. The naive estimate is a random walk and always predicts no change in the exchange rate after one year. This estimate is used as a baseline for assessing the usefulness of the statistical models. Each of the linear estimation techniques outperformed the random walk. The improvement in mean testing error ranged from a factor of two for Japan to a factor of ten for Mexico. For each method, we tested the hypothesis that the mean testing error for the model is less than the mean testing error for the random walk using a pairwise two sample t-test. The results were statistically significant at well below the 1\% significance level in each case.
-\par{} A noteworthy observation from the results table is that the mean testing error does not change much when different linear techniques are used to estimate the model. For each country, we tested the hypothesis that the mean testing errors for the ridge, LASSO and principal component regressions were different than the mean testing error for the standard linear model. Although the differences were statistically significant in some cases, the magnitude of the difference was very small in every case. In practice, this means that each model will produce similar results. Since using more sophisticated regression techniques does not improve the performance of the model, these results support estimating the model using a standard linear regression. In fact, the primary difficulty in producing a good model is not selecting the best estimation technique, but rather choosing the correct predictors. While the results were robust to the estimation technique, they were highly sensitive to the variables included in the model, particularly the months of lag. This makes preliminary work to determine a close to optimal lag vital to producing a useful model.
+\par{} A noteworthy observation from the results table is that the mean testing error does not change much when different linear techniques are used to estimate the model. For each country, we tested the hypothesis that the mean testing errors for the ridge, LASSO and principal component regressions were different than the mean testing error for the standard linear model. Although the differences were statistically significant in some cases, the magnitude of the difference was very small in every case. In practice, this means that each model will produce similar results. Since using more sophisticated regression techniques does not improve the performance of the model, these results support estimating the model using a standard linear regression. In fact, the primary difficulty in producing a good exchange rate model is not selecting the best estimation technique, but rather choosing the correct predictors. While the results were robust to the estimation technique, they were highly sensitive to the variables included in the model, particularly the months of lag. This makes preliminary work to determine a close to optimal lag vital to producing a useful model.
 
 \begin{figure}
 \centering
@@ -302,14 +306,16 @@ Korea	& 0.01053 	& 0.01001 	& 0.00717	& 0.0128 \\
 \par{} In contrast to linear models, changing the lag did not decrease the testing error for the tree based models. The tree based models also performed slightly worse than the linear models. Figure~\ref{tab:treecomparison} shows the results for the tree based methods when the inputs from the linear regression were used. The tree based models were also estimated using the full data set and several different subsets. However, none of the tree based methods were very sensitive to the model's input. Among the tree based approaches, the random forest performed the best. This model outperformed the random walk for all trading partners except for Europe. For Japan, it only outperformed a random walk by a small margin, which was not statistically significant. In all cases, random forests performed worse than linear methods. For Japan and Europe, linear methods outperformed random forests by an order of magnitude. The other tree based methods performed worse than the random walk for most countries. Full trees and pruned trees only outperformed a random walk for Mexico and Korea, but the margins were not statistically significant. In general, tree based methods proved less effective than linear models for predicting exchange rates. It is possible that the reason tree based methods do not perform well is because, even though there are a large number of possible predictors, they can be approximated by a small number of principal components. This makes it difficult for decision trees to partition the data set in a way that is useful for prediction. In general, empirical evidence shows that tree based methods are not competitive with linear methods in low dimensional feature spaces. Our results are consistent with this evidence.
 
 
-\section{Findings}
+\section{Conclusion}
 
-This paper shows that it is possible to predict the percent change in the exchange rate after one year, using macroeconomic indicators as predictors. In this paper, we considered both linear models and tree based methods. Each of the linear models outperformed a random walk, which is used as a baseline for assessing the usefulness of exchange rate models. This result held for each country we considered. In addition, the results show that the predictions for do not change substantially when different linear estimation techniques are used. Instead, they are sensitive the which variables are used as input. This makes choosing an appropriate lag and performing proper variable selection a vital step in producing a good model. In contrast, tree based methods were not sensitive to changes in the input variables. Despite being less sensitive, they performed considerably worse than linear models, although random forests did outperform a random walk. In all, the evidence suggests that linear methods that carefully account for the nature of the time series are the best option for predicting exchange rates.
+This paper shows that it is possible to predict the percent change in the exchange rate after one year, using macroeconomic indicators as predictors. In this paper, we considered both linear models and tree based methods. Each of the linear models outperformed a random walk, which is used as a baseline for assessing the usefulness of exchange rate models. This result held for each country we considered. In addition, the results show that the predictions do not change substantially when different linear estimation techniques are used. Instead, they are sensitive to which variables are used as input. This makes choosing an appropriate lag and performing proper variable selection a vital step in producing a good model. In contrast, tree based methods were not sensitive to changes in the input variables. Despite being less sensitive, they performed considerably worse than linear models, although random forests did outperform a random walk. In all, the evidence suggests that linear methods that carefully account for the nature of the time series are the best option for predicting exchange rates. Since there is no statistically significant difference between linear models we suggest building a model using standard linear regression.
 
 Linear models perform well enough to have a significant impact on business decisions. When writing medium term contracts, using the predicted exchange rate instead of the current exchange as a basis for pricing substantially reduces the risk of conducting business internationally. By using the predicted values from our model, a Mexican manufacturer might expect to save roughly \$70,000 on a \$1,000,000 contract with an American buyer by avoiding adverse currency movements. As this demonstrates, accurately predicting exchange rates can help business leaders make more informed decisions.
 
-Future work on this problem might consider different countries or variables. Since the countries chosen for this paper are major US trading partners, their exchange rates are closely related to US economic indicators. It may be more difficult to model exchange rates for large countries that trade proportionally less with the US, such as India. In addition, new variables could be considered in future work. In particular, exchange rates are sensitive to the perception of market participants. While the impact of this is more significant in the short term, it may be interesting to consider whether it persists for longer time intervals. In all, while we achieved our primary goals in this paper, predicting exchange rates is complex and ripe for continued research.  
+Future work on this problem might consider different countries or variables. Since the countries chosen for this paper are major US trading partners, their exchange rates are closely related to US economic indicators. It may be more difficult to model exchange rates for large countries that trade proportionally less with the US, such as India. In addition, new variables could be considered in future work. In particular, exchange rates are sensitive to the perception of market participants. While the impact of this is more significant in the short term, it may be interesting to consider whether it persists for longer time intervals. In all, while we achieved our primary goals in this paper, predicting exchange rates is complex and ripe for continued research. 
 
+\subsection{Lessons Learned} 
+A few important concepts were learned from this project. We learned new techniques for dealing with time series data such as testing for stationarity and auto-regressive processes. We learned the significance of choosing the right variables when building predictive models. We also learned how the dimensionality of a dataset affects the performance of different methods. These lessons are basic principles in the field of machine learning and are important for all data scientist to understand.
 
      
 % hangref environment
